syntax = "proto3";

package useradd;

service UserAdd {
rpc AddUser(AddDataRequest) returns (AddDataResponse) {}
}


message AddDataRequest{
string value = 1;
}

message AddDataResponse{
string result = 1;
}
